src/objects/LG_Care_Medallia_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It stores the values to be used in the LG_Care_MedalliaRelationshipSurvey_Batch</description>
    <fields>
        <fullName>LG_Care_Contact_Created_Date__c</fullName>
        <label>Contact Created Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Care_Contact_Role__c</fullName>
        <label>Contact Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Care_Last_rNPS_Send_Date__c</fullName>
        <label>Last rNPS Send Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Care_Max_Number_of_Contacts__c</fullName>
        <label>Max Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Care Medallia Settings</label>
</CustomObject>